# queryosity

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  anaConfig.cmake.in  analogical.h  annotated.html  classqueryosity_1_1action.html  classqueryosity_1_1column_1_1calculation.html  classqueryosity_1_1column_1_1computation.html  classqueryosity_1_1column_1_1constant.html  classqueryosity_1_1column_1_1conversion.html  classqueryosity_1_1column_1_1definition.html  classqueryosity_1_1column_1_1definition_3_01_out_07_ins_8_8_8_08_4.html  classqueryosity_1_1column_1_1definition_3_01_ret_07_vals_8_8_8_08_4.html  classqueryosity_1_1column_1_1expression.html  classqueryosity_1_1column_1_1reader.html  classqueryosity_1_1column_1_1representation_3_01_me_07_obs_8_8_8_08_4.html  classqueryosity_1_1dataflow.html  classqueryosity_1_1dataset_1_1column.html  classqueryosity_1_1dataset_1_1reader.html  classqueryosity_1_1dataset_1_1source.html  classqueryosity_1_1hist_1_1hist.html  classqueryosity_1_1json.html  classqueryosity_1_1json_1_1item.html  classqueryosity_1_1lazy.html  classqueryosity_1_1lazy_1_1varied.html  classqueryosity_1_1query_1_1aggregation.html  classqueryosity_1_1query_1_1definition_3_01_t_07_obs_8_8_8_08_4.html  classqueryosity_1_1query_1_1plan.html  classqueryosity_1_1todo.html  classqueryosity_1_1todo_1_1varied.html  concepts.html  conceptual.html  design.html  doxide.yaml  (+27 more)
ana/: Analysis.h  Reader.h  action.h  aggregate.h  analysis.h  calculation.h  cell.h  column.h  computation.h  concurrent.cxx  concurrent.h  constant.h  counter.cxx  counter.h  cut.cxx  cut.h  cutflow.cxx  cutflow.h  definition.h  delayed.h  equation.h  experiment.cxx  experiment.h  input.cxx  (+21 more)
backends/: CMakeLists.txt
backends/queryosity/ROOT/: Hist.hpp  LinkDef.h  Tree.hpp
backends/queryosity/boost/: histogram.hpp
examples/: CMakeLists.txt  data.csv  example-01.cxx  example-02.cxx  example-03.cxx  example-04.cxx  example-hello_world.cxx  example-histogram.cxx  example-multiple_datasets.cxx  example-toys.cxx  example-tree.cxx
examples/data/: data.json
examples/hello/: index.html
examples/hww/: index.html
extensions/: CMakeLists.txt
extensions/queryosity/: col.h  csv.h  hist.h  hist.hpp  json.h  json.hpp  sumw.h  wsum.h  wsum.hpp
extensions/queryosity/ROOT/: Hist.h  Hist.hpp  LinkDef.h  ToyHist.hpp  ToySeed.hpp  Tree.h  hgrid.hpp  hgrid_with_toys.hpp  hist.hpp  hist_categorized.hpp  hist_with_toys.hpp  profile.hpp  tree.hpp
extensions/queryosity/boost/: histogram.hpp
extensions/queryosity/nlohmann/: json.hpp
extensions/queryosity/rapidcsv/: csv.hpp
include/: CMakeLists.txt  analysis.h  calculation.h  column.h  concurrent.h  constant.h  counter.h  cut.h  cutflow.h  delayed.h  experiment.h  looper.h  queryosity.h  queryosity.hpp  reader.h  selection.h  strutils.h  varied.h
include/ana/: abc.h  analogical.h  analysis.h  interface.h
include/ana/interface/: action.h  aggregation.h  aggregation_booker.h  aggregation_bookkeeper.h  aggregation_experiment.h  aggregation_logic.h  aggregation_output.h  aggregation_summary.h  analysis.h  calculation.h  column.h  column_calculation.h  column_computation.h  column_constant.h  column_definition.h  column_definition_2.h  column_equation.h  column_evaluate.h  column_evaluator.h  column_expression.h  column_fixed.h  column_reader.h  column_representation.h  computation.h  concurrent.h  constant.h  counter.h  counter_aggregation.h  counter_book.h  counter_booker.h  counter_bookkeeper.h  counter_definition.h  counter_experiment.h  counter_implementation.h  counter_logic.h  counter_output.h  counter_summary.h  cut.h  cutflow.h  dataflow.h  (+50 more)
include/queryosity/: action.h  action.hpp  column.h  column.hpp  column_calculation.hpp  column_composition.h  column_composition.hpp  column_computation.h  column_computation.hpp  column_constant.h  column_constant.hpp  column_conversion.hpp  column_customization.h  column_definition.h  column_definition.hpp  column_equation.h  column_equation.hpp  column_evaluator.h  column_evaluator.hpp  column_expression.h  column_expression.hpp  column_fixed.h  column_fixed.hpp  column_nominal.h  column_nominal.hpp  column_reader.hpp  column_representation.h  column_series.h  column_series.hpp  column_variation.h  column_variation.hpp  dataflow.h  dataflow.hpp  dataflow_input.hpp  dataflow_output.hpp  dataset.h  dataset.hpp  dataset_column.h  dataset_column.hpp  dataset_input.h  (+67 more)
include/queryosity/interface/: action.h  column.h  column_calculation.h  column_computation.h  column_constant.h  column_conversion.h  column_definition.h  column_equation.h  column_evaluate.h  column_expression.h  column_fixed.h  column_reader.h  column_representation.h  dataflow.h  dataset.h  dataset_column.h  dataset_input.h  dataset_loaded.h  dataset_opened.h  dataset_partition.h  dataset_player.h  dataset_processor.h  dataset_source.h  delayed.h  detail.h  lazy.h  lazy_varied.h  multithread.h  query.h  query_aggregation.h  query_book.h  query_definition.h  query_experiment.h  query_output.h  query_plan.h  selection.h  selection_cutflow.h  systematic.h  systematic_resolver.h  systematic_variation.h  (+3 more)
plugins/: CMakeLists.txt  Column.h  Histogram.h  Json.h  SumOfWeights.h  WeightedSum.h
plugins/ana/: Columnar.h  Histogram.h  Json.h  Json_tmp.h  SumOfWeights.h  WeightedSum.h  col.h  entry_count.h  hist.h  json.h  sum_of_weights.h  sumw.h  trivial_input.h  vecx.h  weighted_average.h  weighted_sum.h  wsum.h
plugins/queryosity/: json.h
tests/: CMakeLists.txt  doctest.h  simple_dataset.h  test-01.cxx  test-02.cxx  test-03.cxx  test-04.cxx  test-advanced_selection.cxx  test-basic_selection.cxx  test-definition.cxx  test-multithread.cxx  test-multithreading.cxx  test-multithreading_consistency.cxx  test-selection.cxx  test-variation.cxx
tests/plugins/: CMakeLists.txt  entry_count.h  sum_of_weights.h  table.h  trivial_input.h  wavg.h  weighted_average.h  weighted_sum.h
tests/units/: CMakeLists.txt  test-aggregation.cxx  test-multithreading.cxx  test-selection.cxx  test-variation.cxx
(+544 files in other folders)
