[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queryosity"
version = "0.9.3"
description = "Python frontend for ROOT data analyses written in queryosity"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Tae Hyoun Park", email = "taehyounpark@icloud.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "tree-sitter",
  "tree-sitter-cpp",
  "rich"
]

[project.optional-dependencies]
slurm = ["simple-slurm"]

[project.scripts]
analyze = "qtypy.analyze:main"

[project.urls]
Homepage = "https://queryosity.readthedocs.io/en/latest/"
Issues = "https://github.com/taehyounpark/queryosity/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]