[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queryosity"
dynamic = ["version"]
description = "Python frontend for ROOT data analyses written in queryosity"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Tae Hyoun Park", email = "taehyounpark@icloud.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "tree-sitter",
  "tree-sitter-cpp",
  "numpy",
  "rich"
]

[project.optional-dependencies]
slurm = ["simple-slurm"]

[project.urls]
Homepage = "https://queryosity.readthedocs.io/en/latest/"
Issues = "https://github.com/taehyounpark/queryosity/issues"

[tool.setuptools.dynamic]
version = { attr = "qtypy._version.__version__" }

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]