if(QUERYOSITY_TESTS)
  add_executable(test-01 ./test-01.cxx)
  target_compile_features(test-01 PUBLIC cxx_std_17)
  target_link_libraries(test-01 queryosity::extensions pthread)
  add_test(NAME test-01 COMMAND test-01)

  add_executable(test-02 ./test-02.cxx)
  target_compile_features(test-02 PUBLIC cxx_std_17)
  target_link_libraries(test-02 queryosity::extensions pthread)
  add_test(NAME test-02 COMMAND test-02)

  add_executable(test-03 ./test-03.cxx)
  target_compile_features(test-03 PUBLIC cxx_std_17)
  target_link_libraries(test-03 queryosity::extensions pthread)
  add_test(NAME test-03 COMMAND test-03)
endif()
